# rust-consumer-producer

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 20200101000000_init.sql
src/: data.rs
src/consumer/: main.rs  process.rs
src/producer/: main.rs
