[package]
name = "ega-backend"
version = "0.1.0"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2018"

[dependencies]
amiquip = "0.3.3"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["std", "derive"] }
clap = "3.0.0-beta.2"
sqlx = { version = "0.4.0-beta.1", features = ["runtime-async-std", "postgres", "uuid", "json"] }
async-std = { version = "1.6.4", features = ["attributes", "unstable"] }

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"
